--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
     "firebase": "^8.6.8",
+    "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
     "nodemon": "^2.0.7",
     "puppeteer-core": "^10.0.0"
