--- a/package.json
+++ b/package.json
@@ -19,8 +19,10 @@
     "express": "^4.17.1",
     "express-validator": "^6.12.1",
     "firebase": "^8.6.8",
+    "firebase-admin": "^10.0.0",
     "jsonwebtoken": "^8.5.1",
     "morgan": "^1.10.0",
+    "multer": "^1.4.3",
     "nodemon": "^2.0.7",
     "puppeteer-core": "^10.0.0"
   }
