--- a/package.json
+++ b/package.json
@@ -26,5 +26,12 @@
     "multer": "^1.4.3",
     "nodemon": "^2.0.7",
     "puppeteer-core": "^10.0.0"
+  },
+  "devDependencies": {
+    "eslint": "^8.10.0",
+    "eslint-config-prettier": "^8.5.0",
+    "husky": "^4.3.8",
+    "lint-staged": "^12.3.4",
+    "prettier": "2.5.1"
   }
 }
