--- a/package.json
+++ b/package.json
@@ -2,10 +2,12 @@
   "name": "backend",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "src/index.ts",
   "scripts": {
     "dev": "tsc-watch --onSuccess \"npm start\"",
     "start": "nodemon dist/app.js",
+    "build": "tsc",
+    "deploy": "npm run build && vercel --prod",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
