--- a/vercel.json
+++ b/vercel.json
@@ -1,16 +1,16 @@
 {
   "version": 2,
+  "env": {},
   "builds": [
     {
-      "src": "src/index.ts",
+      "src": "src/app.ts",
       "use": "@vercel/node"
     }
   ],
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "src/index.ts",
-      "methods": ["GET", "POST", "PUT", "DELETE"]
+      "src": "/.*",
+      "dest": "src/app.ts"
     }
   ]
 }
